<resources>
    <string name="app_name">Ninja ProConnect</string>
    <string name="forgot_password_header_text">Can\’t login?</string>
    <string name="forgot_password_sub_text">We\’ll email you instructions to reset your password.</string>
    <string name="forgot_password_button_text">RESET PASSWORD</string>
    <string name="reset_password_header_text">Great!</string>
    <string name="reset_password_sub_text">Now let\'s create a new password.</string>
    <string name="nav_bar_charts">Charts</string>
    <string name="nav_bar_cook">Cook</string>
    <string name="nav_bar_settings">Settings</string>
    <string name="auth_login_confirm_email_text">You must confirm your email account before continuing.</string>
    <string name="auth_login_reset_password_label">We\'ve emailed you instructions for signing in.</string>
    <string name="auth_login_error_text">This email/password combination is invalid. Please try again.</string>
    <string name="auth_welcome_back_text">Good to see you again</string>
    <string name="auth_login_text">Log in with your Ninja account to start.</string>
    <string name="continue_button">CONTINUE</string>
    <string name="continue_proper">Continue</string>
    <string name="auth_shark_ninja_login_hint">Do you know that you can use your Shark|Ninja account to log in?</string>
    <string name="auth_dont_have_account">Don\'t have an account?</string>
    <string name="auth_already_have_account">Already have an account?</string>
    <string name="auth_sign_up_here"><u>Sign Up here</u></string>
    <string name="auth_log_in_here"><u>Log In</u></string>
    <string name="auth_button_login">LOGIN</string>
    <string name="auth_email_label">EMAIL</string>
    <string name="auth_password_label">PASSWORD</string>
    <string name="auth_button_register">REGISTER NOW</string>
    <string name="auth_username_hint">Type your email</string>
    <string name="auth_password_hint">Type your password</string>
    <string name="auth_password_create_hint">Create a new password</string>
    <string name="auth_create_account">Create an Account</string>
    <string name="auth_login_forgot_password"><u>Forgot your password?</u></string>
    <string name="reset_password_new_email">Another email has been sent.</string>
    <string name="did_not_get_email_desc">Didn\'t get the email? Check your spam folder. If the message still hasn\'t arrived after a few minutes, tap the button below and we will re-send it. </string>
    <string name="reset_password_almost_there">Almost there.</string>
    <string name="reset_password_sent_email_text">We sent you an email with instructions on how to reset your password. Open the email and tap the Reset Password link to get started.</string>
    <string name="reset_password_enter_code">Enter the code</string>
    <string name="reset_password_resend_code">RESEND CODE</string>
    <string name="auth_welcome">Welcome!</string>
    <string name="auth_create_account_text">Let\'s create your new Ninja account.</string>
    <string name="auth_agree_to_terms">I agree to the <u>Terms &amp; Conditions</u></string>
    <string name="auth_privacy_notice_check_text">I have read and understand the <u>Privacy Notice</u></string>
    <string name="auth_verify_email_header_text">We\'re almost there</string>
    <string name="auth_verify_email_sub_text">We sent an email to %1$s. Open the email and tap Verify to proceed.</string>
    <string name="auth_verify_resent_email_text">We just resent the email! Check your email to confirm your account.</string>
    <string name="auth_verify_resend_button">RESEND EMAIL</string>
    <string name="auth_verify_verifying_header">Verifying... please hold on a few seconds.</string>
    <string name="auth_verify_verified_header">Your account has been verified!</string>
    <string name="pairing_step_one">Step 1 <font color="#E5E5E5">of 3</font></string>
    <string name="pairing_step_two">Step 2 <font color="#E5E5E5">of 3</font></string>
    <string name="pairing_step_three">Step 3 <font color="#E5E5E5">of 3</font></string>
    <string name="pairing_network_tips_text"><u>I don\'t see my network</u></string>
    <string name="step_one_of_two"><font color="#767676">Step</font> <font color="#45BE55">1</font> <font color="#767676">of 2</font></string>
    <string name="step_two_of_two"><font color="#767676">Step</font> <font color="#45BE55">2</font> <font color="#767676">of 2</font></string>
    <string name="woodFireDescription">Add Rich, fully developed smokiness to any dish you make flavored by pellets.</string>
    <string name="cooking_charts_description">Our Ninja culinary team has developed cooking charts that will guide you toward a successful cook.</string>
    <string name="pairing_permissions_error_sub_text">Please go to your mobile settings to grant access.
    \n1. Open your mobile device\'s settings
    \n2. Select Privacy
    \n3. Select Local Network
    \n4. Look for the Ninja Kitchen app and
    \ntoggle on to grant permission
    \n5. Return to the Ninja Kitchen app</string>
    <string name="pairing_grill_network_error_tip_1"><b>Reset your Grill:</b> Turn off your Grill presing the button</string>
    <string name="pairing_grill_network_error_tip_2"><b>Reactivate Discoverable mode:</b> Hold for tree seconds the mode button on the Grill.</string>
    <string name="pairing_wifi_network_error_tip_1"><b>Forgot password:</b> Try checking the back of your router or contact someone who may know it.</string>
    <string name="pairing_wifi_network_error_tip_2"><b>Server Issue:</b> Make sure your network is not a VPN or proxy server.</string>
    <string name="pairing_wifi_network_error_tip_3"><b>Other:</b> If you\'re having internet issues with other products in your home, contact your internet service provider.</string>
    <string name="pairing_btle_wifi_network_error_tip_1_header"><b>1. Forgot password:</b></string>
    <string name="pairing_btle_wifi_network_error_tip_1_sub">Try checking the back of your router or contact someone who may know it.</string>
    <string name="pairing_btle_wifi_network_error_tip_2_header"><b>2. Server Issue:</b></string>
    <string name="pairing_btle_wifi_network_error_tip_2_sub">Make sure your network is not a VPN or proxy server.</string>
    <string name="pairing_btle_wifi_network_error_tip_3_header"><b>3. Other:</b></string>
    <string name="pairing_btle_wifi_network_error_tip_3_sub">If you\'re having internet issues with other products in your home, contact your internet service provider.</string>
    <string name="pairing_customer_support_number">Get in touch with us by calling <b>1-855-427-5123</b></string>
    <string name="customer_support_number">1-855-427-5123</string>
    <string name="dialog_network_tips_title">Network Tips</string>
    <string name="dialog_network_tips_router">Reset Router</string>
    <string name="dialog_network_tips_unplug">Unplug the power cord from the wall (or the back of the router), wait 60 seconds, then plug it back in.</string>
    <string name="dialog_network_tips_check_type">Check Network Type</string>
    <string name="dialog_network_tips_ninja_grills">Ninja Grills only connect to 2.4GHz networks. Make sure your 2.4GHz network is not hidden or turned off. If you have an app for your router, use it to unhide or turn on your 2.4GHz network. Alternatively, contact your internet service provider.</string>
    <string name="dialog_network_tips_internet_issues">If you’re having internet issues with other products in your home, contact your internet service provider.</string>
    <string name="password_req_one_upper_letter">1 uppercase letter</string>
    <string name="password_req_one_lower_letter">1 lowercase letter</string>
    <string name="password_req_eight_characters">8 or more characters</string>
    <string name="password_req_one_number">1 number</string>
    <string name="ninja_verify_deep_link">app://open.ninjakitchen.app</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="account">Account</string>
    <string name="account_description">Profile, Change Email, Log out…</string>
    <string name="your_appliance">Your appliance</string>
    <string name="your_appliance_description">Appliance Detail, Warranty Information, Support…</string>
    <string name="about_this_app">About this app</string>
    <string name="about_this_app_description">Data Protection, Terms of Use, Privacy Policy…</string>
    <string name="cooking_notifications">Cooking notifications(push)</string>
    <string name="profile">Profile</string>
    <string name="preferences">Preferences</string>
    <string name="log_out">Log out</string>
    <string name="account_info_description">Name, Address, Phone number...</string>
    <string name="preferences_description">Your appliance, Weight unit, Temperature unit…</string>
    <string name="sign_out_description">Are you sure you want to log out?</string>
    <string name="cancel">Cancel</string>
    <string name="cancel_upper">CANCEL</string>
    <string name="change_email">Change email</string>
    <string name="change_password">Change password</string>
    <string name="new_email">NEW EMAIL</string>
    <string name="confirm_new_email">CONFIRM NEW EMAIL</string>
    <string name="change_email_hint">Type your email</string>
    <string name="change_email_btn">UPDATE + LOG OUT</string>
    <string name="first_name">FIRST NAME*</string>
    <string name="last_name">LAST NAME*</string>
    <string name="address">ADDRESS*</string>
    <string name="address_two">ADDRESS LINE TWO</string>
    <string name="city">CITY*</string>
    <string name="state_province">STATE/PROVINCE*</string>
    <string name="zip_code">ZIP CODE*</string>
    <string name="phone_number">PHONE NUMBER</string>
    <string name="required_field">(*) This field is required</string>
    <string name="account_subtitle">ACCOUNT</string>
    <string name="delete_account_btn"><u>Delete Account</u></string>
    <string name="save_changes">Save Changes</string>
    <string name="okay">Okay</string>
    <string name="state">State</string>
    <string name="required_field_error_msg">Field required</string>
    <string name="dialog_save_changes_title">You have unsaved changes.</string>
    <string name="dialog_save_changes_desc">Would you like to save?</string>
    <string name="dialog_save_changes_btn_save">Save Changes</string>
    <string name="dialog_save_changes_btn_discard">Discard Changes</string>
    <string name="dialog_save_changes_btn_cancel"><u>Cancel</u></string>
    <string name="terms_of_use">Terms of use</string>
    <string name="privacy_policy">Privacy policy</string>
    <string name="info_legal_notice">Information/Legal notice</string>
    <string name="appliance_detail">Appliance Detail</string>
    <string name="fake_appliance_name">Ninja® Foodi® XL Pro</string>
    <string name="dsn">DSN</string>
    <string name="mac_address">Mac address</string>
    <string name="app_version">App version</string>
    <string name="firmware_version">Firmware version</string>
    <string name="delete_appliance">Delete Appliance</string>
    <string name="support">Support</string>
    <string name="warranty_information">Warranty Information</string>
    <string name="default_grill_name">Ninja ProConnect</string>
    <string name="choose_a_name">CHOOSE A NAME</string>
    <string name="bluetooth_permissions_error_button_go_to_settings">GO TO SETTINGS</string>
    <string name="notification_permission_dialog_title">Change Notification Settings</string>
    <string name="notification_permission_dialog_body">You need to allow this app to send push notifications to use this feature.</string>
    <string name="name_grill">Let\'s give your Ninja Grill a name</string>
    <string name="name_grill_second">Give your Ninja appliance a name.</string>
    <string name="about_this_app_description_no_data_protection">Terms of Use, Privacy Policy…</string>
</resources>