<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/settings_background"
    tools:context=".sections.home.fragments.SettingsFragment">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:overScrollMode="never"
        android:scrollbars="none">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/padding_normal">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingTop="@dimen/padding_large"
                android:paddingBottom="@dimen/padding_normal"
                app:layout_constraintTop_toTopOf="parent">

                <com.sharkninja.ninja.connected.kitchen.ui.views.SettingsListItemView
                    android:id="@+id/account_card"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:listItemDescription="@string/account_description"
                    app:listItemLeftIcon="@drawable/ic_iconoir_user"
                    app:listItemRightIcon="@drawable/ic_iconoir_arrow_right"
                    app:listItemTitle="@string/account"
                    app:listItemTopDivider="true" />

                <com.sharkninja.ninja.connected.kitchen.ui.views.SettingsListItemView
                    android:id="@+id/your_appliance_card"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:listItemDescription="@string/your_appliance_description"
                    app:listItemLeftIcon="@drawable/ic_appliance"
                    app:listItemRightIcon="@drawable/ic_iconoir_arrow_right"
                    app:listItemTitle="@string/your_appliance"
                    app:listItemTopDivider="true" />


                <com.sharkninja.ninja.connected.kitchen.ui.views.SettingsListItemView
                    android:id="@+id/about_this_app_card"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:listItemDescription="@string/about_this_app_description_no_data_protection"
                    app:listItemLeftIcon="@drawable/ic_about"
                    app:listItemRightIcon="@drawable/ic_iconoir_arrow_right"
                    app:listItemTitle="@string/about_this_app"
                    app:listItemTopDivider="true" />

                <com.sharkninja.ninja.connected.kitchen.ui.views.SettingsListItemView
                    android:id="@+id/cooking_notifications_card"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:listItemLeftIcon="@drawable/ic_iconoir_bell_notification"
                    app:listItemTitle="@string/cooking_notifications"
                    app:listItemToggleView="true"
                    app:listItemTopDivider="true" />

            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>