<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/settings_background">

    <TextView
        android:id="@+id/appliance_name"
        style="@style/Settings.SubHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_normal"
        android:text="@string/fake_appliance_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/page_title"
        style="@style/Settings.Header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_normal"
        android:layout_marginTop="@dimen/margin_small"
        android:paddingBottom="@dimen/padding_normal"
        android:text="@string/appliance_detail"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/appliance_name" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/page_title">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <com.sharkninja.ninja.connected.kitchen.ui.views.SettingsListItemView
                android:id="@+id/dsn_card"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:listitem_detail="true"
                app:listitem_detail_name="@string/dsn" />

            <com.sharkninja.ninja.connected.kitchen.ui.views.SettingsListItemView
                android:id="@+id/mac_address_card"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:listitem_detail="true"
                app:listitem_detail_name="@string/mac_address" />

            <com.sharkninja.ninja.connected.kitchen.ui.views.SettingsListItemView
                android:id="@+id/app_version_card"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:listitem_detail="true"
                app:listitem_detail_name="@string/app_version" />

            <com.sharkninja.ninja.connected.kitchen.ui.views.SettingsListItemView
                android:id="@+id/firmware_version_card"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:listitem_detail="true"
                app:listitem_detail_name="@string/firmware_version" />

<!--            <com.sharkninja.ninja.connected.kitchen.ui.views.SettingsListItemView-->
<!--                android:id="@+id/appliance_error_log_card"-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="wrap_content"-->
<!--                app:listItemLeftIcon="@drawable/ic_iconoir_warning_circled_outline"-->
<!--                app:listItemTitle="@string/appliance_error_log" />-->

<!--            <com.sharkninja.ninja.connected.kitchen.ui.views.SettingsListItemView-->
<!--                android:id="@+id/restore_factory_settings_card"-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="wrap_content"-->
<!--                app:listItemLeftIcon="@drawable/ic_iconoir_restart"-->
<!--                app:listItemTitle="@string/restore_factory_settings" />-->

            <com.sharkninja.ninja.connected.kitchen.ui.views.SettingsListItemView
                android:id="@+id/delete_appliance_card"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:listItemLeftIcon="@drawable/ic_iconoir_trash"
                app:listItemTitle="@string/delete_appliance" />

        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>