<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/dialog_rounded_background_with_border"
    android:orientation="vertical"
    android:padding="@dimen/padding_xlarge">

    <TextView
        android:id="@+id/title_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_large"
        android:fontFamily="@font/gotham_book_medium"
        android:textFontWeight="700"
        android:lineHeight="@dimen/line_height_xxlarge"
        android:text="@string/notification_permission_dialog_title"
        android:textAlignment="center"
        android:textColor="@color/text_color_primary"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/subtitle_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_normal"
        android:fontFamily="@font/gotham_book_normal"
        android:text="@string/notification_permission_dialog_body"
        android:textAlignment="center"
        android:textColor="@color/text_color_primary"
        android:textSize="16sp" />

    <Button
        android:id="@+id/settings_button"
        style="@style/Ninja.ButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_large"
        android:layout_marginHorizontal="@dimen/margin_normal"
        android:text="@string/bluetooth_permissions_error_button_go_to_settings" />

    <Button
        android:id="@+id/cancel_button"
        style="@style/Ninja.ButtonStyleSecondary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_normal"
        android:layout_marginHorizontal="@dimen/margin_normal"
        android:layout_marginBottom="@dimen/margin_small"
        android:text="@string/cancel_upper" />

</LinearLayout>
