<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginStart="@dimen/margin_large"
    android:layout_marginEnd="@dimen/margin_large"
    tools:context=".sections.home.fragments.pairing.NameYourGrillFragment">

    <TextView
        android:id="@+id/name_robot_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_xxlarge"
        android:fontFamily="@font/gotham_book_normal"
        android:textColor="@color/theme_reverse"
        android:text="@string/name_grill"
        android:textSize="@dimen/text_size_large"
        android:lineHeight="@dimen/text_size_header"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/name_robot_sub"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_normal"
        android:layout_marginBottom="@dimen/margin_xlarge"
        android:fontFamily="@font/gotham_book_medium"
        android:textColor="@color/darker_grey"
        android:text="@string/name_grill_second"
        android:textSize="@dimen/text_size_normal"
        android:lineHeight="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/name_robot_title" />

    <TextView
        android:id="@+id/name_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_xlarge"
        android:fontFamily="@font/gotham_book_medium"
        android:textColor="@color/darker_grey"
        android:text="@string/choose_a_name"
        android:textSize="@dimen/text_size_xsmall"
        android:lineHeight="@dimen/text_size_medium"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/name_robot_sub" />

    <EditText
        android:id="@+id/grill_name_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_small"
        android:textColorHint="@color/medium_grey"
        android:textColor="@color/medium_grey"
        android:hint="@string/default_grill_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/name_label"/>

    <Button
        android:id="@+id/grill_name_continue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_xlarge"
        android:text="@string/continue_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/grill_name_edit_text" />

</androidx.constraintlayout.widget.ConstraintLayout>