<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/dialog_rounded_background_with_border"
    android:orientation="vertical"
    android:padding="@dimen/padding_xlarge">

    <TextView
        android:id="@+id/title_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_large"
        android:lineHeight="@dimen/line_height_xxlarge"
        android:padding="@dimen/padding_normal"
        android:text="@string/sign_out_description"
        android:textAlignment="center"
        android:textColor="@color/text_color_primary"
        android:textSize="24sp" />

    <Button
        android:id="@+id/cancel_button"
        style="@style/Ninja.ButtonStyleSecondary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/margin_normal"
        android:layout_marginBottom="@dimen/margin_small"
        android:text="@string/cancel" />

    <Button
        android:id="@+id/confirm_button"
        style="@style/Ninja.ButtonStyleBlack"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/margin_normal"
        android:layout_marginBottom="@dimen/margin_normal"
        android:text="@string/log_out" />

</LinearLayout>
